--- a/DCSS-Server/nbproject/project.properties
+++ b/DCSS-Server/nbproject/project.properties
@@ -25,9 +25,12 @@ dist.dir=dist
 dist.jar=${dist.dir}/DCSS-Server.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.mysql-connector-java-5.1.25-bin.jar=C:\\Users\\Johnny\\Desktop\\mysql-connector-java-5.1.25-bin.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-java-5.1.25-bin.jar}:\
+    ${reference.GenericLibrary.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -56,6 +59,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.GenericLibrary=../GenericLibrary
+reference.GenericLibrary.jar=${project.GenericLibrary}/dist/GenericLibrary.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
